fix(formula): wrap help panel title text

--- a/packages/sheets-formula/src/views/prompt/help-function/index.module.less
+++ b/packages/sheets-formula/src/views/prompt/help-function/index.module.less
@@ -29,6 +29,7 @@
         font-size: var(--font-size-xs);
         font-weight: 500;
         color: rgb(var(--text-color));
+        overflow-wrap: anywhere;
 
         border-bottom: 1px solid rgb(var(--border-color));
 
